# api/openapi.yaml
@@ -98,6 +98,18 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Server"
+  /servers/my:
+    get:
+      operationId: GetMyServers
+      responses:
+        200:
+          description: Return rent servers
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Server"
   /rent/{server_id}:
     post:
       operationId: RentServer
@@ -143,13 +155,13 @@ components:
         title:
           type: string
         cpu:
-          format: int
+          type: integer
           description: core
         memory:
-          format: int
+          type: integer
           description: MB
         disk:
-          format: int
+          type: integer
           description: MB
     User:
       type: object
